@@ -3,6 +3,7 @@ xxxx-xx-xx: 0.3.1
 
 Bugfixes:
 
+* Don't include doctest and doctrees data in source distributions
 * Fixed incorrect output for doctest blocks
 
 2010-03-09: 0.3.0
